# duplicate-files-search

./: .gitignore  README.md  pyproject.toml  temp.py
dfs/: __init__.py  __main__.py  commands.py  database.py  files_file.py  hashes_file.py  ignore.py  init.py  scan.py
scripts/: dfs_init.bat  update_venv.bat
