[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duplicate-files-search"
dynamic = ["version"]
readme = "README.md"
license = ""
requires-python = ">=3.8"
dependencies = [
]

[tool.hatch.envs.venv]
path = "./venv"

[tool.hatch.version]
path = "dfs/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/dfs",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/dfs",
]
